# gcc-nop-plugin

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: plugin.cpp
test/: hello.c  hello.cpp
